# hades-neural-engine

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: build.yml  docs.yml
docs/: api.md  architecture.md  examples.md  getting-started.md  index.md  inference.md  training.md
examples/: CMakeLists.txt
examples/cartpole/: cartpole_env.hpp  train_cartpole.cpp
include/hne/: hne.hpp
include/hne/algorithms/: ppo.hpp
include/hne/core/: agent.hpp  algorithm.hpp  environment.hpp  policy.hpp  replay_buffer.hpp  types.hpp
include/hne/imgui/: training_widgets.hpp  wandb_panel.hpp
include/hne/inference/: batch_evaluator.hpp  runtime.hpp
include/hne/training/: callbacks.hpp  checkpoint.hpp  metrics.hpp  trainer.hpp  trainer_config.hpp
include/hne/wandb/: callback.hpp  client.hpp
src/algorithms/: ppo.cpp
src/core/: environment.cpp  replay_buffer.cpp  types.cpp
src/imgui/: training_widgets.cpp  wandb_panel.cpp
src/inference/: batch_evaluator.cpp  runtime.cpp
src/training/: checkpoint.cpp  metrics.cpp  trainer.cpp
src/wandb/: callback.cpp  client.cpp
tests/: CMakeLists.txt  test_inference.cpp  test_ppo.cpp  test_replay_buffer.cpp  test_types.cpp
